# dashcam_rs

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml  dashcam_rs.service.template  install_rpi.sh  install_v4l2.sh
migrations/: 0001_init.sql  0001_init_single_cam.sql
src/: cam_service.rs  config.rs  constants.rs  db.rs  db_worker.rs  hls_pipeline_sink.rs  lib.rs  libcamera_pipeline_source.rs  log.rs  main.rs  recording_pipeline.rs  recording_pipeline_factory.rs  ts_file_pipeline_sink.rs  utils.rs  v4l2_pipeline_source.rs
src/db/: db.rs  db_worker.rs  mod.rs
src/pipeline_sinks/: hls_pipeline_sink.rs  mod.rs  pipeline_sink.rs  ts_file_pipeline_sink.rs
src/pipeline_sources/: libcamera_pipeline_source.rs  mod.rs  pipeline_source.rs  v4l2_pipeline_source.rs
tests/: db_tests.rs
