[package]
name = "dashcam_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
ctrlc = "3.5.0"
gstreamer = "0.24.2"
gstreamer-video = "0.24.2"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled", "unlock_notify"] }
signal-hook = "0.3.18"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
rpi = []

[profile.release]
opt-level = 3
lto = true
